[gd_scene load_steps=4 format=3 uid="uid://b1a0lfhx16sg2"]

[ext_resource type="Script" path="res://Scripts/start_screen.gd" id="1_cklc5"]
[ext_resource type="PackedScene" uid="uid://bwrhsav1b6hkf" path="res://scenes/settings.tscn" id="2_20652"]
[ext_resource type="AudioStream" uid="uid://dd7ygwp6gn6h5" path="res://Sound&Music/Music/little mech tower defense main menu.mp3" id="2_scws4"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cklc5")

[node name="LobbyMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_scws4")
bus = &"Music"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BackgroundColor" type="ColorRect" parent="CanvasLayer"]
offset_left = -536.0
offset_top = -169.0
offset_right = 2235.0
offset_bottom = 1333.0
color = Color(0, 0, 0, 1)

[node name="MenuContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.5
offset_top = -43.0
offset_right = 88.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartBtn" type="Button" parent="CanvasLayer/MenuContainer"]
layout_mode = 2
text = "Start
"

[node name="SettingsBtn" type="Button" parent="CanvasLayer/MenuContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="CanvasLayer/MenuContainer"]
layout_mode = 2
text = "Quit"

[node name="Settings" parent="CanvasLayer" instance=ExtResource("2_20652")]
offset_left = 387.0
offset_top = 280.0
offset_right = -369.0
offset_bottom = -174.0

[connection signal="pressed" from="CanvasLayer/MenuContainer/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuContainer/SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="exit_settings" from="CanvasLayer/Settings" to="." method="_on_settings_exit_settings"]
